# mostlyai-qa

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: pre-commit-check.yml  run-tests.yml  workflow.yml
examples/: baseball-players.ipynb  baseball-seasons.ipynb  benchmark-examples.csv  benchmark.ipynb  quick-start.ipynb
examples/baseball-players/ctx-data/: part.000000-trn.parquet  part.000000-val.parquet
examples/baseball-players/generated-data/: part.000000.000000.parquet
examples/baseball-players/tgt-data/: part.000000-trn.parquet  part.000000-val.parquet
examples/baseball-seasons/ctx-data/: part.000000-trn.parquet  part.000000-val.parquet
examples/baseball-seasons/generated-data/: part.000000.000000.parquet
examples/baseball-seasons/tgt-data/: part.000000-trn.parquet  part.000000-val.parquet
src/mostlyai/qa/: __init__.py  accuracy.py  common.py  distances.py  filesystem.py  html_report.py  report.py  report_from_statistics.py  sampling.py  similarity.py
src/mostlyai/qa/assets/: __init__.py
src/mostlyai/qa/assets/html/: head.html  (+2 more)
tests/end_to_end/: test_report.py
tests/end_to_end/fixtures/baseball/: players-holdout.parquet  players-training.parquet  seasons-holdout.parquet  seasons-synthetic.parquet  seasons-training.parquet
tests/end_to_end/fixtures/census/: census-holdout.parquet  census-synthetic.parquet  census-training.parquet
tests/unit/: __init__.py  conftest.py  test_accuracy.py  test_common.py  test_distances.py  test_filesystem.py  test_html_report.py  test_similarity.py
(+3 files in other folders)
