[tool.poetry]
name = "mostlyai-qa"
version = "1.1.0"
description = "Quality assurance for synthetic data"
readme = "README.md"
license = "Apache License v2"
authors = ["MOSTLY AI <dev@mostly.ai>"]
packages = [
    { include = "mostlyai", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = ">=1.26.3,<2.0.0"
scipy = ">=1.11.0"
pandas = ">=2.2.0"
pyarrow = ">=16.0.0"
plotly = ">=5.18.0"
phik = ">=0.12.4"
fastcluster = ">=1.2.6"
joblib = ">=1.2.0"
Jinja2 = ">=3.1.2"
scikit-learn = ">=1.4.0"
sentence-transformers = ">=3.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.7.0"
pytest = ">=7.1.2"
pre-commit = ">=3.2.0"
twine = "^5.1.1"


[tool.ruff]
target-version = "py310"
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
